# pyBondGraph

./: README.md  pyproject.toml
examples/: bg_2r2c_building.py  bg_r_cc_circuit.py  bg_r_l_circuit.py  rc_filter.json  subbg_2_rc_example.py  test_subbondgraph.py
pyBondGraph/: __init__.py  bondgraph.py  core.py  port.py  subbondgraph.py
