[project]
name = "pyBondGraph"
version = "0.2.1"
description = "Modelling tool for linear bond graph systems in Python"
readme = "README.md"
authors = [
    {name = "Matthias Panny", email = "matthias.panny@mci.edu"},
]

requires-python = ">=3.13"

classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]

license = "CC-BY-NC-SA-4.0"

dynamic = ["dependencies"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyBondGraph"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.47.0",
    "streamlit-flow-component>=1.6.1"
]

[project.urls]
Homepage = "https://github.com/MrP123/pyBondGraph"
Issues = "https://github.com/MrP123/pyBondGraph/issues"